--- a/gui/uhuru.desktop
+++ b/gui/uhuru.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Uhuru
 Comment=Uhuru Antivirus
-Exec=uhuru
+Exec=uhuru-qt
 Icon=/usr/share/icons/hicolor/scalable/apps/uhuru.svg
 Terminal=false
 Type=Application
