* removing some exported print functions

--- a/libuhuru/tools/Makefile.am
+++ b/libuhuru/tools/Makefile.am
@@ -1,6 +1,6 @@
 bin_PROGRAMS=uhuru-scan #uhuru-watch
 
-uhuru_scan_CFLAGS=-I$(top_srcdir)/include
+uhuru_scan_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src
 uhuru_scan_LDADD=$(top_builddir)/src/lib/libuhuru.la @GMODULE2_LIBS@ -lmagic
 uhuru_scan_SOURCES=uhuru-scan.c
 
