* added new configuration file parser using Glib scanner; tests ok * finished implementation of structure for modules

--- a/libuhuru/conf/quarantine.conf.in
+++ b/libuhuru/conf/quarantine.conf.in
@@ -11,4 +11,5 @@ enabled=0
 # non-readable
 # quarantine directory must be mode 333 octal. This is normaly managed by 
 # package installation scripts
-quarantine-dir=@localstatedir@/lib/uhuru/quarantine
+quarantine-dir="@localstatedir@/lib/uhuru/quarantine"
+
