--- a/libuhuru/conf/quarantine.conf.in
+++ b/libuhuru/conf/quarantine.conf.in
@@ -1,10 +1,8 @@
-#
-# Uhuru quarantine configuration
-#
+
 [quarantine]
 
 # is quarantine enabled?
-enabled=0
+enable=0
 
 # quarantine directory
 # files containing malware will be moved to this directory, renamed and made 
