--- a/libuhuru/conf/uhuru.conf.in
+++ b/libuhuru/conf/uhuru.conf.in
@@ -5,19 +5,12 @@ conf-dir="@sysconfdir@/uhuru/conf.d"
 
 [mime-types]
 
-mime-type="application/x-dosexec"; clamav; "module5.2"
 mime-type="application/pdf"; clamav
-mime-type="application/x-sharedlib"; "module5.2"
-mime-type="application/x-object"; "module5.2"
-mime-type="application/x-executable"; "module5.2"
+mime-type="application/x-dosexec"; clamav; "module5_2"
+mime-type="application/x-executable"; "module5.2"; clamav
+mime-type="application/x-msdos-program"; "module5_2"; clamav
+mime-type="application/x-object"; "module5_2"; clamav
+mime-type="application/x-sharedlib"; "module5.2"; clamav
+
 # clamav scans every file if no other module applies
 mime-type="*"; clamav
-
-#const char *module5_2_mime_types[] = {
-#  "application/x-sharedlib",
-#  "application/x-object",
-#  "application/x-executable",
-#  "application/x-msdos-program",
-#  "application/x-dosexec",
-#  NULL,
-#};
