* pushed the configuration parser code to its own file * changed signature of set/get configuration functions; now argv is NULL terminated, remove argc argument

--- a/libuhuru/src/lib/Makefile.am
+++ b/libuhuru/src/lib/Makefile.am
@@ -6,6 +6,8 @@ libuhuru_la_SOURCES= \
 action.c \
 conf.c \
 conf.h \
+confparser.c \
+confparser.h \
 dir.c \
 dir.h \
 module.c \
@@ -23,12 +25,14 @@ unixsock.c \
 unixsock.h \
 builtin-modules/alert.c \
 builtin-modules/alert.h \
+builtin-modules/mimetype.c \
+builtin-modules/mimetype.h \
 builtin-modules/quarantine.c \
 builtin-modules/quarantine.h \
 builtin-modules/remote.c \
 builtin-modules/remote.h 
 
-AM_CPPFLAGS= -DLIBUHURU_MODULES_PATH='"$(pkglibdir)/modules"' -DLIBUHURU_CONF_DIR='"$(sysconfdir)/uhuru"' -DLIBUHURU_ALERT_DIR='"$(localstatedir)/spool/uhuru"' -DG_LOG_DOMAIN='"libuhuru"'
+AM_CPPFLAGS= -DLIBUHURU_MODULES_PATH='"$(pkglibdir)/modules"' -DLIBUHURU_CONF_DIR='"$(sysconfdir)/uhuru"' -DG_LOG_DOMAIN='"libuhuru"'
 libuhuru_la_CFLAGS= -I$(top_srcdir)/include
 libuhuru_la_LIBADD= 
 
