--- a/libuhuru/conf/uhuru.conf.in
+++ b/libuhuru/conf/uhuru.conf.in
@@ -3,7 +3,7 @@
 scan-archive=1
 conf-dir="@sysconfdir@/uhuru/conf.d"
 
-[mime-types]
+[mime-type]
 
 mime-type="application/pdf"; clamav
 mime-type="application/x-dosexec"; clamav; "module5_2"
@@ -11,6 +11,5 @@ mime-type="application/x-executable"; "module5.2"; clamav
 mime-type="application/x-msdos-program"; "module5_2"; clamav
 mime-type="application/x-object"; "module5_2"; clamav
 mime-type="application/x-sharedlib"; "module5.2"; clamav
-
 # clamav scans every file if no other module applies
-mime-type="*"; clamav
+mime-type="*"; clamav    
