--- a/modules/clamav/configure.ac
+++ b/modules/clamav/configure.ac
@@ -1,4 +1,4 @@
-AC_INIT(uhuru-mod-clamav,1.3.1,francois@dechelle.net)
+AC_INIT(uhuru-mod-clamav,1.4.0,francois@dechelle.net)
 AM_INIT_AUTOMAKE
 
 # collect arguments
@@ -42,6 +42,12 @@ fi
 PKG_CHECK_MODULES(LIBCLAMAV, libclamav, [HAVE_LIBCLAMAV=yes], [HAVE_LIBCLAMAV=no])
 if test "$HAVE_LIBCLAMAV" = "no"; then
    AC_MSG_ERROR("cannot find ClamAV library")
+fi
+
+# check for glib
+PKG_CHECK_MODULES(GLIB2, glib-2.0, [HAVE_GLIB2=yes], [HAVE_GLIB2=no])
+if test "$HAVE_GLIB2" = "no"; then
+   AC_MSG_ERROR("cannot find glib-2.0 library")
 fi
 
 # database directory
