--- a/modules/clamav/src/Makefile.am
+++ b/modules/clamav/src/Makefile.am
@@ -11,6 +11,8 @@ clamav_la_CFLAGS+= @LIBUHURU_CFLAGS@
 clamav_la_LIBADD+= @LIBUHURU_LIBS@
 clamav_la_CFLAGS+= @LIBCLAMAV_CFLAGS@
 clamav_la_LIBADD+= @LIBCLAMAV_LIBS@
+clamav_la_CFLAGS+= @GLIB2_CFLAGS@
+clamav_la_LIBADD+= @GLIB2_LIBS@
 
 install-exec-hook:
 	-rm -f "$(DESTDIR)$(modulesdir)"/clamav.la "$(DESTDIR)$(modulesdir)"/clamav.a
