--- a/libuhuru/.gitignore
+++ b/libuhuru/.gitignore
@@ -8,7 +8,7 @@ config.status
 configure
 aclocal.m4
 config.guess
-libuhuru-config.h.in
+include/config/libuhuru-config-autoconf.h.in
 config.sub
 depcomp
 install-sh
