Ajout de l'interface graphique de l'état des mises à jour v0.8

--- a/gui/qt/icons/Makefile.am
+++ b/gui/qt/icons/Makefile.am
@@ -1,5 +1,7 @@
 icondir=$(datarootdir)/icons/hicolor/scalable/apps
 
-icon_DATA=uhuru.svg
+icon_DATA= \
+        uhuru.svg
 
-EXTRA_DIST=uhuru.svg
+EXTRA_DIST= \
+        uhuru.svg 
