--- a/VS/UhuruAV/libuhuru/libuhuru.vcxproj.filters
+++ b/VS/UhuruAV/libuhuru/libuhuru.vcxproj.filters
@@ -48,5 +48,8 @@
     <ClCompile Include="..\..\..\libuhuru\src\lib\uhuru.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\libuhuru\src\lib\utils.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
