Add #define os_strerror for linux version conf header

--- a/VS/UhuruAV/libuhuru/libuhuru.vcxproj
+++ b/VS/UhuruAV/libuhuru/libuhuru.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="..\..\..\libuhuru\src\lib\report.c" />
     <ClCompile Include="..\..\..\libuhuru\src\lib\scan.c" />
     <ClCompile Include="..\..\..\libuhuru\src\lib\status.c" />
+    <ClCompile Include="..\..\..\libuhuru\src\lib\uhuru-libmagic\magic.c" />
     <ClCompile Include="..\..\..\libuhuru\src\lib\uhuru.c" />
     <ClCompile Include="..\..\..\libuhuru\src\lib\utils.c" />
   </ItemGroup>
