api mime type implemented on linux

--- a/libuhuru/src/lib/Makefile.am
+++ b/libuhuru/src/lib/Makefile.am
@@ -32,7 +32,9 @@ builtin-modules/quarantine.h \
 builtin-modules/remote.c \
 builtin-modules/remote.h \
 os/dir.h \
-os/linux/dir.c
+os/linux/dir.c \
+os/mimetype.h \
+os/linux/mimetype.c
 
 AM_CPPFLAGS= -DLIBUHURU_MODULES_PATH='"$(pkglibdir)/modules"' -DLIBUHURU_CONF_DIR='"$(sysconfdir)/uhuru"' -DG_LOG_DOMAIN='"libuhuru"'
 libuhuru_la_CFLAGS= -I$(top_srcdir)/include -I$(top_srcdir)/include/config
