* added lib/os/io.h and lib/os/string.h for definition of platform abstraction macros related to I/O (read/write/close) and strings (strdup) * isolated platform specific calls for IPC in os/ipc.h and os/linux/ipc.c

--- a/libuhuru/conf/uhuru.conf.in
+++ b/libuhuru/conf/uhuru.conf.in
@@ -30,7 +30,8 @@ quarantine-dir="@localstatedir@/lib/uhuru/quarantine"
 
 [remote]
 
-socket-dir="@/uhuru"
+socket-dir="@/tmp/uhuru"
+#socket-dir="/tmp/uhuru"
 
 
 # [uhuru]
