Uhuru-av-Windows :: add project clamav on VS solution.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ VS/UhuruAV/UhuruAV.opensdf
 VS/UhuruAV/UhuruAV.sdf
 VS/UhuruAV/module_5_2/Debug/*
 VS/UhuruAV/Debug/*
+VS/UhuruAV/UhuruAV/Debug/*
+VS/UhuruAV/clamav/Debug/*
