--- a/libuhuru/configure.ac
+++ b/libuhuru/configure.ac
@@ -23,6 +23,7 @@ AC_CHECK_FUNCS(strdup)
 AC_CHECK_FUNCS(read)
 AC_CHECK_FUNCS(write)
 AC_CHECK_FUNCS(close)
+AC_CHECK_FUNCS(strerror)
 
 # check for debug
 AC_MSG_CHECKING(for debug)
