* added lib/os/file.h to encapsulate calls to stat(); changed lib/os/dir.h to use same file flags as lib/os/file.h

--- a/libuhuru/src/lib/Makefile.am
+++ b/libuhuru/src/lib/Makefile.am
@@ -31,6 +31,8 @@ builtin-modules/remote.c \
 builtin-modules/remote.h \
 os/dir.h \
 os/linux/dir.c \
+os/file.h \
+os/linux/file.c \
 os/ipc.h \
 os/linux/ipc.c \
 os/mimetype.h \
