Ajout icône blanc dans le systray, gris ailleurs

--- a/gui/qt/icons/Makefile.am
+++ b/gui/qt/icons/Makefile.am
@@ -1,7 +1,9 @@
 icondir=$(datarootdir)/icons/hicolor/scalable/apps
 
 icon_DATA= \
-        uhuru.svg
+        uhuru_white.svg \
+        uhuru_grey.svg
 
 EXTRA_DIST= \
-        uhuru.svg 
+        uhuru_white.svg \
+        uhuru_grey.svg
